welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: Missing closing brace `}' assumed here
while(!estFaceMur){while(!estsurBiscuit){if(!estFaceMur){recule();prendBiscuit();porteBiscuit();avance();poseBiscuit()}
^