welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(!estFaceMur){while(!estsurBiscuit){if(!estFaceMur){recule();prendBiscuit();porteBiscuit();avance();poseBiscuit()}
